--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,19 @@
 {
   "compilerOptions": {
-    "moduleResolution": "node",
-    "target": "es5",
-    "module":"es2015",
-    "lib": ["es2015", "es2016", "es2017", "dom"],
+    "allowJs": false,
     "strict": true,
+    "moduleResolution": "node",
+    "target": "es6",
+    "module":"commonJS",
+    "lib": ["es5", "es6"],
+    "declarationMap": true,
     "sourceMap": true,
     "declaration": true,
     "allowSyntheticDefaultImports": true,
     "downlevelIteration": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
-    "declarationDir": "dist/types",
-    "outDir": "dist/lib",
+    "outDir": "lib",
     "typeRoots": [
       "node_modules/@types"
     ]
