fix: add test.txt

--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   },
   "scripts": {
     "lint": "tslint  --project tsconfig.json -t codeFrame 'src/**/*.ts' 'test/**/*.ts'",
-    "prebuild": "rimraf dist",
+    "prebuild": "rimraf lib",
+    "prepare": "npm run prebuild && npm run build",
     "build": "tsc",
     "test": "jest --coverage",
     "test:watch": "jest --coverage --watch",
